--- a/ci/jobs/ami-id-update.yml
+++ b/ci/jobs/ami-id-update.yml
@@ -7,6 +7,8 @@ jobs:
         config:
           params:
             AWS_ROLE_ARN: arn:aws:iam::((aws_account.management-dev)):role/ci
+          inputs:
+            - name: untested-al2-concourse-ami
   - name: ami-id-update-mgmt
     plan:
       - get: dw-al2-concourse-ami
@@ -15,3 +17,5 @@ jobs:
         config:
           params:
             AWS_ROLE_ARN: arn:aws:iam::((aws_account.management)):role/ci
+          inputs:
+            - name: dw-al2-concourse-ami
